galleria basic style

--- a/style/main.less
+++ b/style/main.less
@@ -50,8 +50,17 @@
 @primary-color: #FFF;
 @secondary-color: #000;
 
+// GALLERY
 
+.galleria {
+    width: 90%;
+    height: 300px;
+    margin: 0 auto;
+}  
 
+// LET'S DO IT
+
+html, body {margin:0; height: 100%;}
 
 body {
     -webkit-animation: fadein 2s; /* Safari, Chrome and Opera > 12.1 */
@@ -59,4 +68,5 @@ body {
         -ms-animation: fadein 2s; /* Internet Explorer */
          -o-animation: fadein 2s; /* Opera < 12.1 */
             animation: fadein 2s; 
+            text-align: center;
 }
