--- a/css/main.less
+++ b/css/main.less
@@ -1,7 +1,6 @@
 // FONTS
 
-@import url(http://fonts.googleapis.com/css?family=Lato:400,300,700,900);
-@import url(http://fonts.googleapis.com/css?family=Montserrat:400,700);
+@import url(http://fonts.googleapis.com/css?family=Rock+Salt|Patrick+Hand|Lato:400,300,700,900);
 
 // MEDIA QUERIES
 
