--- a/css/main.less
+++ b/css/main.less
@@ -1,6 +1,6 @@
 // FONTS
 
-@import url(http://fonts.googleapis.com/css?family=Rock+Salt|Patrick+Hand|Lato:400,300,700,900);
+@import url(http://fonts.googleapis.com/css?family=Shadows+Into+Light|Patrick+Hand|Lato:400,300,700,900);
 
 // MEDIA QUERIES
 
@@ -57,15 +57,199 @@
     margin: 0 auto;
 }  
 
-// LET'S DO IT
 
-html, body {margin:0; height: 100%;}
+
+// LET'S DO IT
+ html {
+    height: 100%;
+    width: 100%;
+    display: block;
+    position: static;
+    overflow: hidden;  
+    padding: 0;
+    margin: 0;    
+    }
 
 body {
-    -webkit-animation: fadein 2s; /* Safari, Chrome and Opera > 12.1 */
-       -moz-animation: fadein 2s; /* Firefox < 16 */
-        -ms-animation: fadein 2s; /* Internet Explorer */
-         -o-animation: fadein 2s; /* Opera < 12.1 */
-            animation: fadein 2s; 
-            text-align: center;
+  height: 100%;
+  width: 100%;
+  display: block;
+  position: relative;
+  overflow: hidden;  
+  padding: 0;
+  margin: 0;  
+  background: #FFF;
+  font-family: 'lato';
+  position: relative;
+}
+    
+.wrapper {
+    height: 100% !important;
+    margin: 0 auto; 
+    overflow: hidden;
+}
+
+.main {
+  float: left;
+  width: 100%;
+  margin: 0 auto;
+    section {
+        overflow: hidden;
+        .container {
+//            position: relative;
+            margin: 0 auto 0;
+            max-width: 800px;
+            z-index: 3;
+            top: 10%;
+        }
+    }
+    .page1 {
+        background: url("../images/bg-header.jpg") center no-repeat;
+        background-size: cover;
+        text-align: center;
+        color: #FFF;
+        .homeHeader {
+            position: absolute;
+            margin: auto;        
+            height: 300px;
+            top: 24px;
+            bottom: 0;
+            left: 0;
+            right: 0;
+            h1 {
+              font-size: 72px;
+              font-weight: 900;
+              text-transform: uppercase;
+              margin: 64px -8px 0px 0px;
+              letter-spacing: 12px;
+            }
+            h2 {
+              font-family: 'Shadows Into Light';
+              font-size: 24px;
+              margin-top: 4px;
+              letter-spacing: 1px;
+                .line {
+                    border-bottom: 2px solid #FFF;
+                    top: -17px;
+                    position: relative;
+                    margin: 0 -2px 0 -2px;
+                    padding: 0 6px 0 6px;
+                }
+                .offset-line {
+                    position: relative;
+                    top: 17px;
+                }
+            }
+        }
+    }
+    .page2 {
+    background-color: #DDAAAA;    
+    text-align: center;
+        h1 {
+          padding: 0;
+          margin-bottom: 15px;
+          font-size: 70px;
+          color: black;
+        }
+        h2 {
+          color: rgba(0,0,0,0.85);
+        }
+    }
+    .page3 {
+    background-color: #AAAADD;    
+    text-align: center;
+        h1 {
+          padding: 0;
+          margin-bottom: 15px;
+          font-size: 70px;
+          color: black;
+        }
+        h2 {
+          color: rgba(0,0,0,0.85);
+        }
+    }
+}
+
+
+
+.onepage-wrapper {
+  width: 100%;
+  height: 100%;
+  display: block;
+  position: relative;
+  padding: 0;
+  -webkit-transform-style: preserve-3d;
+}
+
+.onepage-wrapper .section {
+  width: 100%;
+  height: 100%;
+}
+
+.onepage-pagination {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 10px;
+  z-index: 5;
+  list-style: none;
+  margin: auto;
+  padding: 0;
+  height: 120px;
+}
+.onepage-pagination li {
+  padding: 0;
+  text-align: center;
+}
+.onepage-pagination li a{
+  padding: 10px;
+  width: 4px;
+  height: 4px;
+  display: block;
+  
+}
+.onepage-pagination li a:before{
+  content: '';
+  position: absolute;
+  width: 4px;
+  height: 4px;
+  background: #FFF;
+  border-radius: 10px;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+}
+
+.onepage-pagination li a.active:before{
+  width: 10px;
+  height: 10px;
+  background: none;
+  border: 1px solid #FFF;
+  margin-top: -4px;
+  left: 8px;
+}
+
+.disabled-onepage-scroll, .disabled-onepage-scroll .wrapper {
+  overflow: auto;
+}
+
+.disabled-onepage-scroll .onepage-wrapper .section {
+  position: relative !important;
+  top: auto !important;
+  left: auto !important;
+}
+.disabled-onepage-scroll .onepage-wrapper {
+  -webkit-transform: none !important;
+  -moz-transform: none !important;
+  transform: none !important;
+  -ms-transform: none !important;
+  min-height: 100%;
+}
+
+
+.disabled-onepage-scroll .onepage-pagination {
+  display: none;
+}
+
+body.disabled-onepage-scroll, .disabled-onepage-scroll .onepage-wrapper, html {
+  position: inherit;
 }
