--- a/css/main.less
+++ b/css/main.less
@@ -6,58 +6,10 @@
 
 @mobile:      ~"only screen and (max-width: 768px)";
 
-// ANIMATIONS
-
-.transitions {
-	-webkit-transition: .5s;
-	-moz-transition: .5s;
-	-ms-transition: .5s;
-	-o-transition: .5s;
-	transition: .5s;
-}
-
-@keyframes fadein {
-    from { opacity: 0; }
-    to   { opacity: 1; }
-}
-/* Firefox < 16 */
-@-moz-keyframes fadein {
-    from { opacity: 0; }
-    to   { opacity: 1; }
-}
-
-/* Safari, Chrome and Opera > 12.1 */
-@-webkit-keyframes fadein {
-    from { opacity: 0; }
-    to   { opacity: 1; }
-}
-
-/* Internet Explorer */
-@-ms-keyframes fadein {
-    from { opacity: 0; }
-    to   { opacity: 1; }
-}
-
-/* Opera < 12.1 */
-@-o-keyframes fadein {
-    from { opacity: 0; }
-    to   { opacity: 1; }
-}
-
 // COLORS
 
-@primary-color: #FFF;
-@secondary-color: #000;
-
-// GALLERY
-
-.galleria {
-    width: 90%;
-    height: 300px;
-    margin: 0 auto;
-}  
-
-
+@primary-color: #A5916B;
+@secondary-color: #E8E1D2;
 
 // LET'S DO IT
  html {
@@ -95,20 +47,100 @@ body {
   margin: 0 auto;
     section {
         overflow: hidden;
-        .container {
-//            position: relative;
-            margin: 0 auto 0;
-            max-width: 800px;
-            z-index: 3;
-            top: 10%;
-        }
+//        .container {
+////            position: relative;
+//            margin: 0 auto 0;
+//            max-width: 600px !important;
+//            z-index: 3;
+//            top: 10%;
+//        }
     }
     .page1 {
         background: url("../images/bg-header.jpg") center no-repeat;
         background-size: cover;
         text-align: center;
         color: #FFF;
-        .homeHeader {
+
+        h1 {
+          font-size: 72px;
+          font-weight: 900;
+          text-transform: uppercase;
+          margin: 64px -8px 0px 0px;
+          letter-spacing: 12px;
+        }
+        h2 {
+          font-family: 'Shadows Into Light';
+          font-size: 24px;
+          margin-top: 4px;
+          letter-spacing: 1px;
+            .line {
+                border-bottom: 2px solid #FFF;
+                top: -17px;
+                position: relative;
+                margin: 0 -2px 0 -2px;
+                padding: 0 6px 0 6px;
+            }
+            .offset-line {
+                position: relative;
+                top: 17px;
+            }
+        }
+    }
+    .page2 {
+        background-color: #FFF;    
+        text-align: center;
+        color: @primary-color;
+        h2 {
+          font-size: 26px;
+        }
+        p {
+            font-weight: 300;
+            font-size: 18px;
+            line-height: 30px;
+        }
+    }
+    .page3 {
+        background-color: @primary-color;    
+        text-align: center;
+        color: #FFF;
+        h2 {
+          font-size: 26px;
+        }
+        p {
+            font-weight: 300;
+            font-size: 18px;
+            line-height: 30px;
+        }
+    }
+    .page4 {
+                background-color: #FFF;    
+        text-align: center;
+        color: @primary-color;
+        h2 {
+          font-size: 26px;
+        }
+        p {
+            font-weight: 300;
+            font-size: 18px;
+            line-height: 30px;
+        }
+    }
+    .page5 {
+        background-color: @primary-color;    
+        text-align: center;
+        color: #FFF;
+        h2 {
+          font-size: 26px;
+        }
+        p {
+            font-weight: 300;
+            font-size: 18px;
+            line-height: 30px;
+        }
+    }
+}
+
+.verticalMiddle {
             position: absolute;
             margin: auto;        
             height: 300px;
@@ -116,58 +148,8 @@ body {
             bottom: 0;
             left: 0;
             right: 0;
-            h1 {
-              font-size: 72px;
-              font-weight: 900;
-              text-transform: uppercase;
-              margin: 64px -8px 0px 0px;
-              letter-spacing: 12px;
-            }
-            h2 {
-              font-family: 'Shadows Into Light';
-              font-size: 24px;
-              margin-top: 4px;
-              letter-spacing: 1px;
-                .line {
-                    border-bottom: 2px solid #FFF;
-                    top: -17px;
-                    position: relative;
-                    margin: 0 -2px 0 -2px;
-                    padding: 0 6px 0 6px;
-                }
-                .offset-line {
-                    position: relative;
-                    top: 17px;
-                }
-            }
-        }
-    }
-    .page2 {
-    background-color: #DDAAAA;    
-    text-align: center;
-        h1 {
-          padding: 0;
-          margin-bottom: 15px;
-          font-size: 70px;
-          color: black;
-        }
-        h2 {
-          color: rgba(0,0,0,0.85);
-        }
-    }
-    .page3 {
-    background-color: #AAAADD;    
-    text-align: center;
-        h1 {
-          padding: 0;
-          margin-bottom: 15px;
-          font-size: 70px;
-          color: black;
-        }
-        h2 {
-          color: rgba(0,0,0,0.85);
-        }
-    }
+            max-width: 850px;
+            width: 95%;
 }
 
 
@@ -213,7 +195,7 @@ body {
   position: absolute;
   width: 4px;
   height: 4px;
-  background: #FFF;
+  background: @secondary-color;
   border-radius: 10px;
   -webkit-border-radius: 10px;
   -moz-border-radius: 10px;
@@ -223,7 +205,7 @@ body {
   width: 10px;
   height: 10px;
   background: none;
-  border: 1px solid #FFF;
+  border: 1px solid @secondary-color;
   margin-top: -4px;
   left: 8px;
 }
