--- a/assets/content-gallery/style.css
+++ b/assets/content-gallery/style.css
@@ -42,6 +42,14 @@
     opacity: 1;
 }
 
+.mbr-gallery .mbr-gallery-item .projects {
+    font-size: 24px;
+    font-weight: 300;
+    display: inline-block;
+    text-align: center;
+    vertical-align: middle;
+}
+
 /* remove spacing */
 .mbr-gallery .mbr-gallery-row.no-gutter {
     margin: 0;
