--- a/assets/content-slider/style.css
+++ b/assets/content-slider/style.css
@@ -3,6 +3,11 @@
    Slider
 
 -------*/
+
+.mbr-slider {
+    background-color: #F7F7F7;
+}
+
 .mbr-slider .carousel-inner > .active,
 .mbr-slider .carousel-inner > .next,
 .mbr-slider .carousel-inner > .prev {
@@ -15,7 +20,7 @@
     top: 50%;
     margin-top: -27px;
     line-height: 54px;
-    border: 2px solid #fff;
+    border: 2px solid #555;
     opacity: 1;
     text-shadow: none;
     z-index: 5;
@@ -30,18 +35,18 @@
 	margin-right: 20px;
 }
 .mbr-slider .carousel-control:hover {
-	background: #fff;
-	color: #000;
+	background: #555;
+	color: #F7F7F7;
 }
 .mbr-slider .carousel-indicators {
     bottom: 20px;
 }
 .mbr-slider .carousel-indicators li,
 .mbr-slider .carousel-indicators .active {
-    width: 15px;
-    height: 15px;
+    width: 12px;
+    height: 12px;
     margin: 3px;
-    border: 2px solid #ffffff;
+    border: 2px solid #555;
 }
 
 @media (max-width: 767px) {
