--- a/assets/content-gallery/style.css
+++ b/assets/content-gallery/style.css
@@ -11,7 +11,7 @@
 .mbr-gallery .mbr-gallery-item > a {
     position: relative;
     display: block;
-    background: #fff;
+    background: #000;
     outline: none;
 }
 .mbr-gallery .mbr-gallery-row {
@@ -24,7 +24,7 @@
     transition: .2s opacity ease-in-out;
 }
 .mbr-gallery .mbr-gallery-item > a:hover img {
-    opacity: 0.9;
+    opacity: 0.8;
 }
 .mbr-gallery .mbr-gallery-item .icon {
     position: absolute;
