--- a/assets/content/css/mbr-additional.css
+++ b/assets/content/css/mbr-additional.css
@@ -4,83 +4,100 @@
 	font-size: 16px;
 }
 #menu-0.mbr-navbar--stuck .mbr-navbar__section {
-	/*background: #faaf40;*/
 	background-color: #444;
 }
 #menu-0 .mbr-navbar__section {
 }
 #menu-0 .mbr-navbar__items a {
 	font-family: 'Lato', sans-serif;
+	outline: none;
 }
 #menu-0 .mbr-brand__name a {
 	font-family: 'Lato', sans-serif;
 	font-size: 20px;
+	/*-webkit-transition: all 0.3s ease;
+  	-o-transition: all 0.3s ease;
+  	transition: all 0.3s ease;*/
 }
-#header1-1 h1 {
+#menu-0 .mbr-brand__name a:hover {
+	color: #faaf40 !important;
+}
+#header h1 {
 	font-family: 'Lato', sans-serif !important;
 	font-size: 72px !important;
+	letter-spacing: -2px;
 }
-#header1-1 p {
+#header p {
 	font-size: 36px !important;
 	font-family: 'Lato', sans-serif !important;
 }
-#header2-10 H1 {
+#about {
+	background-color: #fff;
+}
+#about h1 {
 	text-align: center !important;
 	font-family: 'Lato', sans-serif !important;
-	color: #faaf40 !important;
-	font-weight: 700;
+	
 }
-#header2-10 P {
+#about p {
 	text-align: center !important;
 	font-family: 'Lato', sans-serif !important;
 	font-size: 18px !important;
 	color: #555;
 }
-#header2-10 .btn {
+#about .btn {
 	font-family: 'Lato', sans-serif;
 }
-#header3-5 h3 {
+#work {
+	background-color: #f5f5f5;
+}
+
+#work h3 {
 	font-family: 'Lato', sans-serif !important;
 	text-align: center !important;
-	font-size: 46px !important;
 	color: #faaf40 !important;
-	padding-bottom: 12px !important;
 }
-#header3-5 p {
+#work p {
 	text-align: center !important;
 	font-family: 'Lato', sans-serif !important;
+	font-size: 18px;
 }
-#header3-5 span {
+#work span {
 	font-size: 20px !important;
 	color: #cccccc !important;
 }
-#form1-6 .mbr-header__text {
+
+#contact {
+	background-color: #fff;
+}
+#contact .mbr-header__text {
 	font-family: 'Lato', sans-serif;
 	font-size: 46px;
 	color: #faaf40;
 }
-#form1-6 .btn {
+#contact .btn {
 	font-family: 'Lato', sans-serif;
 }
-#footer1-25 {
-	background-color: #555;
+#footer {
+	background-color: #DDD;
 }
 
-#footer1-25 p {
+#footer p {
 	font-family: 'Lato', sans-serif !important;
 	font-size: 14px !important;
 }
 
-#footer1-25 .left-side {
+#footer .left-side {
 	text-align: left !important;
+	letter-spacing: 0;
 }
 
-#footer1-25 .right-side {
+#footer .right-side {
 	text-align: right !important;
 }
 
 @media (max-width: 767px) {
-	#footer1-25 .right-side, #footer1-25 .left-side {
+	#footer .right-side, #footer .left-side {
 		text-align: center !important;
 	}
 }
@@ -97,6 +114,10 @@
 #menu-7 .mbr-navbar__items a {
 	font-family: 'Lato', sans-serif;
 }
+#menu-7 .mbr-navbar__items a:hover {
+	color: #faaf40 !important;
+}
+
 #menu-7 .mbr-brand__name a {
 	font-family: 'Lato', sans-serif;
 	font-size: 20px;
@@ -109,4 +130,21 @@
 }
 #content5-16 p {
 	color: #fff;
+}
+.inactive {
+	pointer-events: none;
+	cursor: not-allowed;
+}
+#content5-12 {
+	background-color: #F9F9F9;
+}
+#content5-12 .caption h3 {
+	color: #faaf40;
+	font-family: 'Lato', sans-serif;
+	font-size: 46px;
+	text-align: center;
+}
+#content5-12 p {
+	color: #555;
+	font-family: 'Lato', sans-serif !important;
 }
