minor changes and fixes
- fixed outline on close button for modal
- added modal title and body custom style
- changed about background color
- changed header background attachment

--- a/assets/content/css/style.css
+++ b/assets/content/css/style.css
@@ -1533,7 +1533,7 @@ a:focus {
   height: 100vh;
 }
 .mbr-section--bg-adapted {
-  background-attachment: scroll;
+  background-attachment: fixed;
   background-position: 50% 0;
   background-repeat: no-repeat;
   background-size: cover;
