--- a/assets/content/css/mbr-additional.css
+++ b/assets/content/css/mbr-additional.css
@@ -32,7 +32,7 @@
 	font-family: 'Lato', sans-serif !important;
 }
 #about {
-	background-color: #fff;
+	background-color: #f5f5f5;
 }
 #about h1 {
 	text-align: center !important;
@@ -102,6 +102,11 @@
 	}
 }
 	
+@media (max-width: 767px) {
+	#footer .left-side {
+		margin-bottom: 16px;
+	}
+}
 
 #menu-7 .mbr-brand__name {
 	font-size: 16px;
@@ -134,17 +139,4 @@
 .inactive {
 	pointer-events: none;
 	cursor: not-allowed;
-}
-#content5-12 {
-	background-color: #F9F9F9;
-}
-#content5-12 .caption h3 {
-	color: #faaf40;
-	font-family: 'Lato', sans-serif;
-	font-size: 46px;
-	text-align: center;
-}
-#content5-12 p {
-	color: #555;
-	font-family: 'Lato', sans-serif !important;
 }
